whitespace right on mobile issue fix

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,13 @@
 /* Base */
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 body {
     line-height: 1.7;
     color: rgba(0, 0, 0, 0.5);
